--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                         <span class="text-primary">Simmons</span>
                     </h1>
                     <div class="subheading mb-5">
-                        123 Noneyobiznuss · Somewhere, UT 80810 · (317) 585-8468 ·
-                        <a href="mailto:name@email.com">elisimmo@byu.edu</a>
+                        123 Noneyobiznuss · Somewhere, UT 80810 · (123) 123-1234 ·
+                        <a href="mailto:name@email.com">cosmocougar@byu.edu</a>
                     </div>
                     <p class="lead mb-5">Hello! I am Lizzy, a student at Brigham Young University. I like to play the piano and be outside.</p>
                     <div class="social-icons">
